test/classes/bharshbarg/field-outer.chpl
record Bar {
  var outer : int;
}

var b : Bar;
writeln(b);
